--- a/.github/workflows/github-actions-build.yaml
+++ b/.github/workflows/github-actions-build.yaml
@@ -4,6 +4,7 @@ jobs:
   build:
     runs-on: macos-10.15  
     steps:
+      - uses: actions/checkout@v2
       - run: | 
           make
           make install
